--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,26 +1,26 @@
-.forecast {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 0;
-}
-
-.forecast li {
-  width: 19%;
-  border: 3px solid white;
-  padding: 30px 10px;
-  border-radius: 20px;
-  border-top-style: initial;
-}
-
 @media screen and (min-width: 700px) {
   .forecast li {
     width: 13%;
+  }
+
+  .weather_font {
+    font-size: 50px;
   }
 }
 
 @media screen and (min-width: 900px) {
   .forecast li {
     width: 15%;
+  }
+
+  .weather_font {
+    font-size: 60px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .forecast li {
+    width: 12%;
   }
 }
 
