--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -65,7 +65,7 @@
       </div>
     </li>
   </ul>
-  <!--ul class="forecast center-content text-center">
+  <ul class="forecast center-content text-center">
     <li>
       <h1>Entry name for CID</h1>
       <input id="data-test">
@@ -86,7 +86,7 @@
       <input id="data-test">
       <button (click)="test('Chotta Suxena')">SUBMIT</button>
     </li>
-  </ul-->
+  </ul>
   <h3 class="center-content text-center color_white black_border">
     <a routerLink="/home">Back</a>
   </h3>
