--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,3 +27,12 @@
 .negative_margin_top {
   margin-top: -30px;
 }
+
+.cityform {
+  margin: 30px 30px 30px 0;
+}
+
+.cityform input {
+  width: 40%;
+  margin-right: 10px;
+}
